--- a/Makefile.in
+++ b/Makefile.in
@@ -2,17 +2,7 @@
 # Makefile for ECE 2300
 #=========================================================================
 # Author : Christopher Batten (Cornell)
-# Date   : September 7, 2024
-
-hws = \
-  FullAdder_GL.v \
-  AdderRippleCarry_4b_GL.v \
-
-tests = \
-  FullAdder_GL-test.v \
-  AdderRippleCarry_4b_GL-test.v \
-
-sims = \
+# Date   : September 5, 2025
 
 #-------------------------------------------------------------------------
 # Basic setup
@@ -32,16 +22,42 @@ default : all
 .PHONY : default
 
 #-------------------------------------------------------------------------
+# modules
+#-------------------------------------------------------------------------
+
+modules = \
+  ece2300 \
+  lab2 \
+
+#-------------------------------------------------------------------------
+# check helper template
+#-------------------------------------------------------------------------
+
+define check_part
+$(1)_test_logs = $$(patsubst %.v, %.log, $$($(1)_tests))
+check-$(subst _,-,$(1)) : $$($(1)_test_logs)
+	@sed -e '/^$$$$/N;/\n.*finish/d' $$($(1)_test_logs) \
+    | tee test-summary-$(subst _,-,$(1)).txt
+	@echo ""
+junk += test-summary-$(subst _,-,$(1)).txt
+endef
+
+#-------------------------------------------------------------------------
 # Directories
 #-------------------------------------------------------------------------
 
 top_dir     := @srcdir@
 scripts_dir := $(top_dir)/scripts
-hw_dir      := $(top_dir)/hw
-test_dir    := $(top_dir)/test
-sim_dir     := $(top_dir)/sim
 
-VPATH := $(hw_dir) $(test_dir) $(sim_dir)
+include $(foreach m,$(modules),$(top_dir)/$(m)/$(m).mk)
+
+srcs  := $(foreach m,$(modules),$($(m)_srcs))
+tests := $(foreach m,$(modules),$($(m)_tests))
+sims  := $(foreach m,$(modules),$($(m)_sims))
+
+VPATH := $(foreach m,$(modules),$(top_dir)/$(m))
+VPATH += $(foreach m,$(modules),$(top_dir)/$(m)/test)
+VPATH += $(foreach m,$(modules),$(top_dir)/$(m)/sim)
 
 #-------------------------------------------------------------------------
 # Programs
@@ -50,8 +66,11 @@ VPATH := $(hw_dir) $(test_dir) $(sim_dir)
 VMKDEPS          := $(scripts_dir)/mk-verilog-deps
 WARN2ERR         := $(scripts_dir)/warnings2errors
 
-VERILATOR_FLAGS  := --quiet --timing -Wall -Wno-DECLFILENAME
+VERILATOR_FLAGS  := --quiet --timing -Wall \
+                      -Wno-DECLFILENAME -Wno-UNOPTFLAT -Wno-VARHIDDEN
 VERILATOR_LINT   := @VERILATOR@ --lint-only $(VERILATOR_FLAGS)
+
+ECE2300_LINT     := $(scripts_dir)/ece2300-lint
 
 IVERILOG_FLAGS   := -Wall -Winfloop -Wno-timescale -g2012
 IVERILOG_COMPILE := $(WARN2ERR) @IVERILOG@ $(IVERILOG_FLAGS)
@@ -65,16 +84,20 @@ test_exes := $(patsubst %.v, %,     $(tests))
 test_logs := $(patsubst %.v, %.log, $(tests))
 
 $(test_deps) : %.d : %.v
-	$(VMKDEPS) -I $(hw_dir) -I $(test_dir) $* $<
+	$(VMKDEPS) -I $(top_dir) $* $<
 
 $(test_exes) : % : %.v
-	$(VERILATOR_LINT) -I$(hw_dir) -I$(test_dir) --top-module Top $<
-	$(IVERILOG_COMPILE) -I $(hw_dir) -I $(test_dir) -s Top -o $@ $<
+	$(VERILATOR_LINT) -I$(top_dir) --top-module Top $<
+	$(IVERILOG_COMPILE) -I $(top_dir) -s Top -o $@ $<
 
 $(test_logs) : %.log : %
 	./$< > $@
 
 check : $(test_logs)
+	@sed -e '/^$$/N;/\n.*finish/d' $(test_logs) | tee test-summary.txt
+	@echo ""
+
+check-% : $(test_logs)
 	@sed -e '/^$$/N;/\n.*finish/d' $(test_logs) | tee test-summary.txt
 	@echo ""
 
@@ -91,11 +114,11 @@ sim_deps := $(patsubst %.v, %.d, $(sims))
 sim_exes := $(patsubst %.v, %,   $(sims))
 
 $(sim_deps) : %.d : %.v
-	$(VMKDEPS) -I $(hw_dir) -I $(sim_dir) $* $<
+	$(VMKDEPS) -I $(top_dir) $* $<
 
 $(sim_exes) : % : %.v
-	$(VERILATOR_LINT) -I$(hw_dir) -I$(sim_dir) --top-module Top $<
-	$(IVERILOG_COMPILE) -I $(hw_dir) -I $(sim_dir) -s Top -o $@ $<
+	$(VERILATOR_LINT) -I$(top_dir) --top-module Top $<
+	$(IVERILOG_COMPILE) -I $(top_dir) -s Top -o $@ $<
 
 deps += $(sim_deps)
 exes += $(sim_exes)
